--- a/index.html
+++ b/index.html
@@ -135,13 +135,29 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="card mb-4 shadow-sm">
-                        <img class="bd-placeholder-img card-img-top" src="./assets/shadeOpener.gif" alt="shadeOpener" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="9000">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img class="bd-placeholder-img card-img-top d-block" src="./assets/blinds.gif" alt="shadeOpener" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                            </div>
+                            <div class="carousel-item">
+                              <img class="bd-placeholder-img card-img-top" src="./assets/blindsPic.png" alt="shadeOpener" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
                         <div class="card-body">
                           <h5 class="card-title">Automated window shade opener</h5>
                           <p class="card-text">I made a machine that opens my window shades every morning at 7am</p>
                           <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                              <a type="button" class="btn btn-sm btn-outline-secondary" href="#">View</a>
                               <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/mckinleyelliot/shadeOpener">Code</a>
                             </div>
                             <small class="text-muted">Arduino</small>
