--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
 </head>
 <body>
 
-  <header>
+
     <section class="jumbotron text-center text-white">
       <div class="container">
         <h1>Elliot McKinley</h1>
         <h4>Web Developer</h4>
-        <p class="lead">Full stack developer looking to grow my career in tech. Hands-on learner and tinkerer. Problem-solver and collaborator.</p>
+        <p class="lead">Web developer looking to grow my career in tech. Hands-on learner and tinkerer. Problem-solver and collaborator.</p>
         <p>
           <a href="https://www.linkedin.com/in/elliot-mckinley/" class="btn btn-primary my-2 button1">LinkedIn</a>
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Contact</button>
         </p>
       </div>
     </section>
-  </header>
+
+
     <main role="main">
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog cascading-modal modal-avatar modal-sm" role="document">
@@ -54,7 +55,47 @@
 
       <div class="album py-5 bg-light">
         <div class="container">
-          <h3 class="jumbotron-heading">Deployed Web Applications</h3>
+
+
+          <h3 class="jumbotron-heading">Professional Work</h3>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top vievesImg" src="./assets/vl.png" alt="Vieve's Leaves" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Vieve's Leaves</title><rect width="100%" height="100%" fill="#55595c"/>
+                <div class="card-body">
+                  <h5 class="card-title">VievesLeaves.com</h5>
+                  <p class="card-text">An Ecommerce site for selling CBD infused products.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.vievesleaves.com">View</a>
+                    </div>
+                    <small class="text-muted">Wordpress, Woocommerce, Divi</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top chmImg" src="./assets/CHM.png" alt="Route Share web app GIF" width="100%"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                <div class="card-body">
+                  <h5 class="card-title">Chicago Hard Money</h5>
+                  <p class="card-text">A simple single page site for a loan company to attract new clients and answer questions. This project required custom scripts to meet on client design requests.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://chicagohardmoney.com">View</a>
+                    </div>
+                    <small class="text-muted">Wordpress, Divi</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            </div>   
+
+
+          <h3 class="jumbotron-heading">Personal Projecets</h3>
 
           <div class="row">
             <div class="col-md-6">
@@ -93,6 +134,10 @@
 
             </div>             <!-- row -->
 
+
+
+            
+
             <div class="row">
               <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
@@ -115,14 +160,14 @@
                 <div class="card mb-4 shadow-sm">
                   <img class="bd-placeholder-img card-img-top" src="./assets/comingSoon.png" alt="InternetSpeedHistory" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
                   <div class="card-body">
-                    <h5 class="card-title">Internet Speed History</h5>
-                    <p class="card-text">My next project will feature an internet speed test tool, and will store previous uses so you can track download speeds over time</p>
+                    <h5 class="card-title">Artist Profile / Shop</h5>
+                    <p class="card-text">My next app is a profile and shop page to feature an artist or band, and sell art or merchandise. It utilizes the MERN stack.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <a type="button" class="btn btn-sm btn-outline-secondary" style="text-decoration:line-through">View</a>
                         <a type="button" class="btn btn-sm btn-outline-secondary" style="text-decoration:line-through">Code</a>
                       </div>
-                      <small class="text-muted">Python</small>
+                      <small class="text-muted">MongoDB, Express, React, Node</small>
                     </div>
                   </div>
                 </div>
