--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="col-md-6">
               <div class="card mb-4 shadow-sm">
-                <img class="bd-placeholder-img card-img-top chmImg" src="./assets/CHM.png" alt="Route Share web app GIF" width="100%"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                <img class="bd-placeholder-img card-img-top chmImg" src="./assets/chm.png" alt="Chicago Hard Money Preview Pic" width="100%"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
                 <div class="card-body">
                   <h5 class="card-title">Chicago Hard Money</h5>
                   <p class="card-text">A simple single page site for a loan company to attract new clients and answer questions. This project required custom scripts to meet on client design requests.</p>
