--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elliot McKinley</title>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png"
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
@@ -20,7 +21,7 @@
   <meta property="og:image" content="./assets/screencap.png"/>
 </head>
 <body>
-    <section class="jumbotron text-center text-white">
+    <section class="jumbotron1 text-center text-white">
       <div class="container">
         <h1>Elliot McKinley</h1>
         <h4>Web Developer</h4>
@@ -54,30 +55,16 @@
 
 
           <h3 class="jumbotron-heading">Professional Work</h3>
-
+        <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <div class="card mb-4 shadow-sm">
-                <img class="bd-placeholder-img card-img-top vievesImg" src="./assets/vl.png" alt="Vieve's Leaves" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Vieve's Leaves</title><rect width="100%" height="100%" fill="#55595c"/>
-                <div class="card-body">
-                  <h5 class="card-title">VievesLeaves.com</h5>
-                  <p class="card-text">An Ecommerce site for selling CBD infused products.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.vievesleaves.com">View</a>
-                    </div>
-                    <small class="text-muted">Wordpress, Woocommerce, Divi</small>
-                  </div>
-                </div>
-              </div>
-            </div>
+            
 
-            <div class="col-md-6">
+            <div class="col-md-6 d-flex">
               <div class="card mb-4 shadow-sm">
-                <img class="bd-placeholder-img card-img-top chmImg" src="./assets/chm.png" alt="Chicago Hard Money Preview Pic" width="100%"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
+                <img class="bd-placeholder-img card-img-top chmImg" src="./assets/chm.png" alt="Chicago Hard Money Preview Pic" width="100%"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>CHM</title><rect width="100%" height="100%" fill="#55595c"/>
                 <div class="card-body">
                   <h5 class="card-title">Chicago Hard Money</h5>
-                  <p class="card-text">A single page site for a loan company to attract new clients and answer questions. This project required custom scripts to meet on client design requests.</p>
+                  <p class="card-text">A single page site for a loan company to attract new clients and answer questions. This project required custom scripts to meet client design requests.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a type="button" class="btn btn-sm btn-outline-secondary" href="http://chicagohardmoney.com">View</a>
@@ -88,12 +75,57 @@
               </div>
             </div>
 
-            </div>   
 
 
-          <h3 class="jumbotron-heading">Personal Projects</h3>
+            <div class="col-md-6 d-flex">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top vievesImg" src="./assets/lotz3.gif" alt="LLI" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Lotz Logistics, Inc.</title><rect width="100%" height="100%" fill="#55595c"/>
+                <div class="card-body">
+                  <h5 class="card-title">LotzLogistics.com</h5>
+                  <p class="card-text">A multi page site for a trucking and logistics company.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.LotzLogistics.com">View</a>
+                    </div>
+                    <small class="text-muted">Wordpress, Divi</small>
+                  </div>
+                </div>
+              </div>
+            </div>
 
+
+
+          </div>             <!-- row -->
+        </div>
+
+        <div class="container-fluid">
           <div class="row">
+
+            <div class="col-md-6">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top vievesImg" src="./assets/vl.png" alt="Vieve's Leaves" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Vieve's Leaves</title><rect width="100%" height="100%" fill="#55595c"/>
+                <div class="card-body">
+                  <h5 class="card-title">VievesLeaves.com</h5>
+                  <p class="card-text">An Ecommerce site for selling CBD infused products.</p>
+                  <br>
+                  <br>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.vievesleaves.com">View</a>
+                    </div>
+                    <small class="text-muted">Wordpress, Woocommerce, Divi</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>             <!-- row -->
+        </div>
+<br>
+          <h3 class="jumbotron-heading">Personal Projects</h3>
+        <div class="container-fluid">
+          <div class="row">
+
             <div class="col-md-6">
               <div class="card mb-4 shadow-sm">
                 <img class="bd-placeholder-img card-img-top" src="./assets/ReactWeather.gif" alt="React Weather web app GIF" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
@@ -116,7 +148,6 @@
                 <img class="bd-placeholder-img card-img-top" src="./assets/routeShare.gif" alt="Route Share web app GIF" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
                 <div class="card-body">
                   <h5 class="card-title">Route-Share.com</h5>
-                  
                   <p class="card-text">A list of downloadable KML files to help my friends pick our next motorcycle ride.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -130,7 +161,9 @@
             </div>
 
             </div>             <!-- row -->
+          </div>
 
+          <div class="container-fluid">
             <div class="row">
               <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
@@ -168,8 +201,9 @@
               </div>
 
             </div>             <!-- row -->
+          </div>
 
-            <div class="album py-5 bg-light">
+            <!-- <div class="album py-5 bg-light">
               <div class="container">
                 <h3 class="jumbotron-heading">Non web-related coding projects</h3>
                   <div class="row">
@@ -221,7 +255,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
     </main>
     <footer class="text-muted">
