--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <p class="float-right">
         <a href="#">Back to top</a></p>
         <p>Created with Bootstrap</p>
-        <p>Elliot McKinley 2021</p>
+        <p>Elliot McKinley</p>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
