--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
                   <img class="bd-placeholder-img card-img-top" src="./assets/comingSoon.png" alt="InternetSpeedHistory" width="100%" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
                   <div class="card-body">
@@ -198,7 +198,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>             <!-- row -->
           </div>
