--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <p class="card-text">A list of downloadable KML files to help my friends pick our next motorcycle ride.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.route-share.com">View</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.routeshare.elliotmckinley.com">View</a>
                       <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/mckinleyelliot/motoroutes">Code</a>
                     </div>
                     <small class="text-muted">C#, .NET, AWS EC2, MySQL</small>
@@ -174,7 +174,7 @@
                     <p class="card-text">A google maps API with a list of wild game butchers who will test venison for CWD - a deadly deer disease.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.ilcwdhunterhelper.com">View</a>
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="http://www.hunterhelper.elliotmckinley.com">View</a>
                         <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/mckinleyelliot/cwdmap">Code</a>
                       </div>
                       <small class="text-muted">C#, .NET, AWS EC2, MySQL</small>
